--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,15 @@ h1 {
   margin: 25px auto;
   transition: background 500ms;
 }
+
+#red {
+  background-color: red;
+}
+
+#yellow {
+  background-color: yellow;
+}
+
+#green {
+  background-color: green;
+}
